--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                         ✨ NEW
                     </span>
                     <span class="text-white font-semibold">
-                        Tuxedo 0.5.0 Updated:
+                        Tuxedo 0.8.0 Released:
                     </span>
                     <span class="text-white/90 text-sm">
-                        Exception Translation • Audit Logging • Query Caching • Bulk Operations
+                        Thread Safety • SQL Injection Prevention • Async Best Practices • Simplified Bowtie API
                     </span>
                 </div>
                 <a href="tuxedo.html" class="inline-flex items-center px-4 py-2 bg-white hover:bg-gray-100 text-blue-700 rounded-lg text-sm font-semibold transition-colors">
