--- a/tuxedo.html
+++ b/tuxedo.html
@@ -1168,8 +1168,8 @@
                 <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-6">
                     <h4 class="text-lg font-semibold text-white mb-4">Service Configuration</h4>
                     <div class="font-mono text-sm text-gray-300 overflow-x-auto">
-                        <pre><code><span class="text-gray-500">// Program.cs - Bowtie setup</span>
-<span class="text-blue-400">builder</span>.<span class="text-green-400">Services</span>.<span class="text-green-400">AddNoundryTuxedoBowtie</span>();
+                        <pre><code><span class="text-gray-500">// Program.cs - Bowtie setup (v0.5.0+ simplified API)</span>
+<span class="text-blue-400">builder</span>.<span class="text-green-400">Services</span>.<span class="text-green-400">AddBowtie</span>();
 
 <span class="text-purple-400">var</span> <span class="text-blue-400">app</span> = <span class="text-blue-400">builder</span>.<span class="text-green-400">Build</span>();
 
