--- a/bowtie.html
+++ b/bowtie.html
@@ -124,7 +124,7 @@
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">2. Configure Services</h3>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm space-y-1">
                             <div class="text-gray-300">builder.Services.<span class="text-green-400">AddTuxedoSqlServer</span>(connectionString);</div>
-                            <div class="text-gray-300">builder.Services.<span class="text-green-400">AddNoundryTuxedoBowtie</span>();</div>
+                            <div class="text-gray-300">builder.Services.<span class="text-green-400">AddBowtie</span>();</div>
                         </div>
                     </div>
                     
@@ -726,7 +726,7 @@
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-6">
                             <div class="font-mono text-sm text-gray-300 overflow-x-auto">
                                 <pre><code><span class="text-gray-500">// Program.cs - Advanced Bowtie configuration</span>
-<span class="text-blue-400">builder</span>.<span class="text-green-400">Services</span>.<span class="text-green-400">AddNoundryTuxedoBowtie</span>(<span class="text-blue-400">options</span> =>
+<span class="text-blue-400">builder</span>.<span class="text-green-400">Services</span>.<span class="text-green-400">AddBowtie</span>(<span class="text-blue-400">options</span> =>
 {
     <span class="text-gray-500">// Assembly containing your POCO models</span>
     <span class="text-blue-400">options</span>.<span class="text-green-400">ModelAssembly</span> = <span class="text-purple-400">typeof</span>(<span class="text-yellow-400">Product</span>).<span class="text-green-400">Assembly</span>;
