--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
                     <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
                         <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
                     </svg>
-                    <span class="text-sm font-semibold">DECEMBER 2025 UPDATES</span>
+                    <span class="text-sm font-semibold">JANUARY 2026 UPDATES</span>
                 </div>
                 <h2 class="text-3xl lg:text-4xl font-bold mb-4">
-                    New Products & Platform Improvements
+                    AI Gateway Hosted API & TOON Support
                 </h2>
                 <p class="text-xl mb-6 max-w-3xl mx-auto opacity-95">
-                    Sentinel APM launched, NounJS v0.9.25 released, and AI Gateway v1.1.0 with multi-provider support
+                    AIGW now available at api.noundry.ai with BYOK model, plus TOON serialization for ~40% token savings
                 </p>
                 <div class="grid md:grid-cols-4 gap-6 mt-8">
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
@@ -332,22 +332,22 @@
                         <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">🚀 220 tests passing</div>
                     </div>
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
-                        <div class="text-3xl font-bold mb-2">0.9.0</div>
+                        <div class="text-3xl font-bold mb-2">0.9.25</div>
                         <div class="text-sm font-semibold mb-1">NounJS</div>
                         <div class="text-xs opacity-80">Client-Side UI Framework</div>
                         <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">✨ ~8KB bundle</div>
                     </div>
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
-                        <div class="text-3xl font-bold mb-2">1.1.0</div>
+                        <div class="text-3xl font-bold mb-2">API</div>
                         <div class="text-sm font-semibold mb-1">AI Gateway</div>
-                        <div class="text-xs opacity-80">Multi-Provider AI API</div>
-                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ Chain Prompting</div>
+                        <div class="text-xs opacity-80">Hosted at api.noundry.ai</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">🔑 BYOK Model</div>
                     </div>
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
-                        <div class="text-3xl font-bold mb-2">2.0.0</div>
-                        <div class="text-sm font-semibold mb-1">NoundryMCP</div>
-                        <div class="text-xs opacity-80">Documentation Server</div>
-                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">📚 130+ docs indexed</div>
+                        <div class="text-3xl font-bold mb-2">TOON</div>
+                        <div class="text-sm font-semibold mb-1">Serialization</div>
+                        <div class="text-xs opacity-80">Token-Optimized Format</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">📉 ~40% token savings</div>
                     </div>
                 </div>
                 <div class="mt-8">
